# amadv.github.io

./: .gitignore  CLAUDE.md  LICENSE  README.md  amadv.github.io.nix  brutalist.css  feedback.nix  flake.nix  gen.py  index.html  key.asc  publish.sh  rss.xml  serve.sh
.github/workflows/: deploy.yml
contact/: index.html
content/: index.md
cv/: index.html
feedback/: .gitignore  Cargo.toml  feedback.rs  flake.nix  index.html
files/: index.html
files/code/: index.html
files/images/: index.html
files/people/: blogroll.txt  index.html
files/uses/: equipment.txt  hardware.txt  index.html  software.txt
files/whoami/: bio.txt  index.html  interests.txt  values.txt
info/: index.html
now/: index.html
posts/: index.html
posts/ai_loop/: index.html
posts/analog_habits/: index.html
posts/bad_judges_of_intelligence/: index.html
posts/batch_edit_files_with_ed/: index.html
posts/breathe/: index.html
posts/capturing_thoughts/: index.html
posts/code_exposure/: index.html
posts/dataism/: index.html
posts/delete_second_brain/: index.html
posts/digital_freedom/: index.html
posts/digital_minimalism/: index.html
posts/first_step/: index.html
posts/focus/: index.html
posts/future_friend/: index.html
posts/gitea_docker/: index.html
posts/hello_world/: index.html
posts/how_i_roll/: index.html
posts/human_voices/: index.html
posts/inputs/: index.html
projects/: index.html
static/: feedback.js  style.css
templates/: base.html.j2  feedback.html.j2  page.html.j2  post.html.j2  posts.html.j2  rss.xml.j2
uses/: index.html
(+105 files in other folders)
