[package]
name = "feedback"
version = "0.1.0"
authors = ["Aaron Madved <aaronmadved@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lettre = { version = "0.11", features = ["smtp-transport", "builder"] }
config = "0.15.4"
clap = { version = "4.2", features = ["derive"] }

[[bin]]
name = "feedback"
path = "feedback.rs"
test = false
doc = false